--- a/backend/app/templates/base.html
+++ b/backend/app/templates/base.html
@@ -18,7 +18,9 @@
         <a href="/upload" class="hover:underline">Upload de Obra</a>
         <a href="/transacao" class="hover:underline">Transação</a>
         <a href="/cadeia" class="hover:underline">Blockchain</a>
-        <a href="/token" class="hover:underline">Token</a>
+        <a href="/chave" class="hover:underline">Chave Privada</a>
+        <a href="/token" class="hover:underline">Tokens</a>
+        <a href="/artworks_view" class="hover:underline">Artworks</a>
 
         <!-- Área do usuário -->
         <div id="user-info" class="ml-6 text-sm font-medium hidden">
